Display JSON in browser

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <script type="text/javascript" src="public/app.js"></script>
     <script type="text/javascript">
-        var html = document.querySelector('html').innerHTML;
+        var html = document.querySelector('html');
         var LanguageParser = LanguageParser.default;
         new LanguageParser(html).getStrings();
     </script>
